[package]
name        = "pyth-iota-relayer-cli"
description = "CLI: `start` runs the relay daemon, `coins` manages the gas-coin pool."
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "pyth-iota-relayer"
path = "src/main.rs"

[dependencies]
iota-coin-pool.workspace             = true
pyth-hermes-client.workspace         = true
move-bindgen-runtime.workspace       = true
contracts-rs.workspace               = true
wormhole-rs.workspace                = true
iota-framework-rs.workspace          = true
move-stdlib-rs.workspace             = true
iota-sdk-types.workspace             = true
iota-sdk-crypto.workspace            = true
iota-sdk-graphql-client.workspace    = true
iota-sdk-transaction-builder.workspace = true
tokio.workspace                      = true
futures.workspace                    = true
clap.workspace                       = true
serde.workspace                      = true
serde_yaml.workspace                 = true
serde_json.workspace                 = true
reqwest.workspace                    = true
base64.workspace                     = true
tracing.workspace                    = true
tracing-subscriber.workspace         = true
anyhow.workspace                     = true
thiserror.workspace                  = true
hex.workspace                        = true
comfy-table.workspace                = true
owo-colors.workspace                 = true
